Fixed build error because of unsupported java 8 dependency to Base64 class